Fix entry point for Render

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sarkari-job-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
