--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "sitemap": "^8.0.0",
     "slugify": "^1.6.6",
     "twilio": "^5.5.0"
   },
